--- a/package.json
+++ b/package.json
@@ -10,6 +10,17 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.4.1"
+    "@astrojs/react": "^2.1.3",
+    "@astrojs/tailwind": "^3.1.2",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
+    "astro": "^2.4.1",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "standard": "^17.0.0",
+    "tailwindcss": "^3.0.24"
+  },
+  "eslintConfig": {
+    "extends": "./node_modules/standard/eslintrc.json"
   }
 }
