--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "standard": "^17.0.0",
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "^3.0.24",
+    "toastify-js": "^1.12.0"
   },
   "eslintConfig": {
     "extends": "./node_modules/standard/eslintrc.json"
