--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "^18.0.0",
     "standard": "^17.0.0",
     "tailwindcss": "^3.0.24",
-    "toastify-js": "^1.12.0"
+    "toastify-js": "^1.12.0",
+    "yup": "^1.1.1"
   },
   "eslintConfig": {
     "extends": "./node_modules/standard/eslintrc.json"
