--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "astro": "^2.4.1",
+    "canvas-confetti": "^1.6.0",
     "excel4node": "^1.8.2",
     "firebase": "^9.22.0",
     "formik": "^2.2.9",
