--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "app-bitacoras-mylove",
   "type": "module",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -21,10 +21,12 @@
     "formik": "^2.2.9",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "standard": "^17.0.0",
     "tailwindcss": "^3.0.24",
     "toastify-js": "^1.12.0",
     "yup": "^1.1.1"
+  },
+  "devDependencies": {
+    "standard": "^17.0.0"
   },
   "eslintConfig": {
     "extends": "./node_modules/standard/eslintrc.json"
