--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "dependencies": {
     "@astrojs/react": "^2.1.3",
     "@astrojs/tailwind": "^3.1.2",
+    "@astrojs/vercel": "^3.4.0",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
-    "astro": "^2.4.1",
+    "astro": "^2.5.5",
     "canvas-confetti": "^1.6.0",
     "excel4node": "^1.8.2",
     "firebase": "^9.22.0",
